# XT-Editor

./: .gitignore  .gitmodules  ATTRIBUTIONS.md  CMakeLists.txt  README.md  ROADMAP.md  Xenia-HW-Controller-PRD.md  mw2xt_editor_development_plan.md  users-jake-downloads-mw2xt-editor-devel-scalable-snowflake.md
docs/: ratelimit-test.md  test-plan.md  xenia-setup.md
docs/proposals/: 2026-06-21-gearmulator-hardware-bridge-proposal.md
docs/spec/: README.md  editor-requirements.md  sysex-protocol.md
docs/superpowers/plans/: 2026-06-20-m1.6a-page-switch-main-completion.md
docs/superpowers/specs/: 2026-06-20-m1.6a-page-switch-main-completion-design.md  2026-06-21-xenia-hardware-bridge-design.md
references/: MidiKraft-librarian.md  README.md  edisyn.md  gearmulator.md  mwsd.md
source/mw2xtEditor/: ConditionalImage.cpp  ConditionalImage.h  EditorController.cpp  EditorController.h  HardwareMidiDevice.cpp  HardwareMidiDevice.h  PageButtonBar.cpp  PageButtonBar.h  PageComponent.cpp  PageComponent.h  PageContainer.cpp  PageContainer.h  PatchModel.cpp  PatchModel.h  README.md  SpritesheetButton.cpp  SpritesheetButton.h  SpritesheetKnob.cpp  SpritesheetKnob.h
source/mw2xtLib/: GlobalData.h  MultiData.h  Protocol.cpp  Protocol.h  README.md  SoundData.h  WaveCodec.cpp  WaveCodec.h
source/mw2xtPlugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/mw2xtUI/: ParamRegistry.cpp  ParamRegistry.h  README.md
source/mw2xtUI/skins/xtDefault/: README.md
source/patchManager/: README.md
testing/: IAC-test.md  autodetect  m13test.txt
tests/: CMakeLists.txt  TestRunner.h  test_conditional_image.cpp  test_page_button_bar.cpp  test_page_container.cpp  test_patch_model.cpp  test_protocol.cpp  test_wave_codec.cpp
tools/: sndp_rate_test.py  sndp_rate_test_results.txt
